Elastic Beanstalk deploy automation

--- a/web-sandbox/build.gradle
+++ b/web-sandbox/build.gradle
@@ -7,10 +7,12 @@ buildscript {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.11.6"
         classpath "org.grails.plugins:hibernate5:6.0.4"
+        classpath "gradle.plugin.fi.evident.gradle.beanstalk:gradle-beanstalk-plugin:0.0.7"
+
     }
 }
 
-version "0.2"
+version "0.4"
 group "web.sandbox"
 
 apply plugin:"eclipse"
@@ -19,6 +21,8 @@ apply plugin:"war"
 apply plugin:"org.grails.grails-web"
 apply plugin:"org.grails.grails-gsp"
 apply plugin:"asset-pipeline"
+
+apply plugin: "fi.evident.beanstalk"
 
 repositories {
     mavenLocal()
@@ -35,6 +39,19 @@ dependencyManagement {
 grails {
     plugins {
         compile project(":mod-sandbox")
+    }
+}
+
+beanstalk {
+    s3Endpoint = "s3-eu-central-1.amazonaws.com"
+    beanstalkEndpoint = "elasticbeanstalk.eu-central-1.amazonaws.com"
+    deployments {
+
+        test {
+            war = 'build/libs/web-sandbox-0.2.war'
+            application = 'mvp'
+            environment = 'mvp-env'
+        }
     }
 }
 
