--- a/app-admin/grails-app/conf/application.yml
+++ b/app-admin/grails-app/conf/application.yml
@@ -106,8 +106,8 @@ environments:
             url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     production:
         dataSource:
-            dbCreate: none
-            url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            dbCreate: create #'create-drop', 'create', 'update' or 'validate' - 'none' or any other value - does nothing
+            url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
             properties:
                 jmxEnabled: true
                 initialSize: 5
