--- a/app-admin/build.gradle
+++ b/app-admin/build.gradle
@@ -80,6 +80,10 @@ dependencies {
     compile 'org.grails.plugins:spring-security-core:3.1.1'
 
     compile 'org.grails.plugins:spring-security-appinfo:3.0.0'
+
+    runtime 'org.postgresql:postgresql:9.4-1206-jdbc42'
+
+    testCompile "org.grails.plugins:build-test-data:3.0.1"
 }
 
 bootRun {
