--- a/app-admin/grails-app/conf/application.yml
+++ b/app-admin/grails-app/conf/application.yml
@@ -100,6 +100,8 @@ environments:
         dataSource:
           dbCreate: create #'create-drop', 'create', 'update' or 'validate' - 'none' or any other value - does nothing
           url: jdbc:h2:./devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+
+          pooled: true
           properties:
               jmxEnabled: true
               initialSize: 5
@@ -124,23 +126,35 @@ environments:
             url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     production:
         dataSource:
-            dbCreate: update #'create-drop', 'create', 'update' or 'validate' - 'none' or any other value - does nothing
-            url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            dbCreate: create-drop # 'create-drop', 'create', 'update' or 'validate' - 'none' or any other value - does nothing
+            driverClassName: org.postgresql.Driver
+            dialect: org.hibernate.dialect.PostgreSQLDialect
+            url: jdbc:postgresql://grail3book.coaaiefokwqz.eu-central-1.rds.amazonaws.com:5432/prodDb
+            username: dbuser
+            password: password123
+
+            pooled: true
             properties:
+#               https://tomcat.apache.org/tomcat-8.0-doc/jdbc-pool.html
                 jmxEnabled: true
                 initialSize: 5
-                maxActive: 50
+                maxActive: 20
                 minIdle: 5
-                maxIdle: 25
+                maxIdle: 10
                 maxWait: 10000
                 maxAge: 600000
                 timeBetweenEvictionRunsMillis: 5000
                 minEvictableIdleTimeMillis: 60000
                 validationQuery: SELECT 1
-                validationQueryTimeout: 3
+                validationQueryTimeout: 30
                 validationInterval: 15000
-                testOnBorrow: true
+                testOnBorrow: false
                 testWhileIdle: true
                 testOnReturn: false
                 jdbcInterceptors: ConnectionState
                 defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+
+               
+            
+        
+
