--- a/app-admin/grails-app/conf/application.yml
+++ b/app-admin/grails-app/conf/application.yml
@@ -126,7 +126,7 @@ environments:
             url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     production:
             dataSource:
-                dbCreate: update #'create-drop', 'create', 'update' or 'validate' - 'none' or any other value - does nothing
+                dbCreate: create #'create-drop', 'create', 'update' or 'validate' - 'none' or any other value - does nothing
                 url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
                 properties:
                     jmxEnabled: true
