--- a/app-web/build.gradle
+++ b/app-web/build.gradle
@@ -39,6 +39,12 @@ dependencyManagement {
     applyMavenExclusions false
 }
 
+grails {
+    plugins {
+        compile project(":mod-domain")
+    }
+}
+
 dependencies {
     assets "com.craigburke.angular:angular-template-asset-pipeline:2.3.0"
     assets "com.craigburke.angular:angular-annotate-asset-pipeline:2.4.0"
@@ -75,6 +81,8 @@ dependencies {
     testCompile "org.grails:grails-datastore-rest-client"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
+
+    compile 'org.grails.plugins:spring-security-core:3.1.1'
 }
 
 bootRun {
