--- a/app-web/grails-app/conf/application.yml
+++ b/app-web/grails-app/conf/application.yml
@@ -6,6 +6,8 @@ grails:
     spring:
         transactionManagement:
             proxies: false
+    cors:
+        enabled: true
 info:
     app:
         name: '@info.app.name@'
