--- a/mod-domain/build.gradle
+++ b/mod-domain/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     provided "org.grails:grails-plugin-services"
     provided "org.grails:grails-plugin-domain-class"
     testCompile "org.grails:grails-plugin-testing"
+
+    compile 'commons-lang:commons-lang:2.6'
 }
 
 bootRun {
