--- a/app-web/build.gradle
+++ b/app-web/build.gradle
@@ -16,7 +16,7 @@ buildscript {
     }
 }
 
-version "1.16"
+version "1.17"
 group "app.web"
 
 apply plugin:"eclipse"
@@ -101,6 +101,8 @@ dependencies {
 
 //    compile 'org.grails.plugins:spring-security-core:3.1.1'
     compile "org.grails.plugins:spring-security-rest:2.0.0.M2"
+
+    runtime 'org.postgresql:postgresql:9.4-1206-jdbc42'
 }
 
 bootRun {
