--- a/app-admin/build.gradle
+++ b/app-admin/build.gradle
@@ -84,6 +84,12 @@ dependencies {
     runtime 'org.postgresql:postgresql:9.4-1206-jdbc42'
 
     testCompile "org.grails.plugins:build-test-data:3.0.1"
+
+
+    compile 'org.grails.plugins:quartz:2.0.9'
+    compile 'org.grails.plugins:quartz-monitor:1.3'
+
+    compile 'com.github.groovy-wslite:groovy-wslite:1.1.2'
 }
 
 bootRun {
