--- a/app-microservice/build.gradle
+++ b/app-microservice/build.gradle
@@ -67,6 +67,10 @@ dependencies {
     testCompile "org.grails:grails-datastore-rest-client"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
+
+    compile 'com.github.groovy-wslite:groovy-wslite:1.1.2'
+
+    runtime 'org.postgresql:postgresql:9.4-1206-jdbc42'
 }
 
 bootRun {
