--- a/app-microservice/grails-app/conf/application.yml
+++ b/app-microservice/grails-app/conf/application.yml
@@ -26,7 +26,13 @@ endpoints:
 
 ---
 server:
-  port: 8083
+  port: 8444
+  ssl:
+          enabled: true
+          key-store: /Users/cristian/app-microservice.keystore
+          key-store-password: Password123!
+          key-alias: app-microservice
+          key-password: Password123!
 
 ---
 grails:
@@ -82,63 +88,12 @@ dataSource:
 environments:
     development:
         dataSource:
-            dbCreate: create-drop
+            dbCreate: create  # 'create-drop', 'create', 'update' or 'validate' - 'none' or any other value - does nothing
             url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     test:
-#        dataSource:
-#            dbCreate: update
-#            url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-#        dataSource:
-#              dbCreate: update #'create-drop', 'create', 'update' or 'validate' - 'none' or any other value - does nothing
-#              url: jdbc:h2:./devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-#
-#              pooled: true
-#              properties:
-#                  jmxEnabled: true
-#                  initialSize: 5
-#                  maxActive: 50
-#                  minIdle: 5
-#                  maxIdle: 25
-#                  maxWait: 10000
-#                  maxAge: 600000
-#                  timeBetweenEvictionRunsMillis: 5000
-#                  minEvictableIdleTimeMillis: 60000
-#                  validationQuery: SELECT 1
-#                  validationQueryTimeout: 3
-#                  validationInterval: 15000
-#                  testOnBorrow: true
-#                  testWhileIdle: true
-#                  testOnReturn: false
-#                  jdbcInterceptors: ConnectionState
-#                  defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
         dataSource:
-            dbCreate: update # 'create-drop', 'create', 'update' or 'validate' - 'none' or any other value - does nothing
-            driverClassName: org.postgresql.Driver
-            dialect: org.hibernate.dialect.PostgreSQLDialect
-            url: jdbc:postgresql://grail3book.coaaiefokwqz.eu-central-1.rds.amazonaws.com:5432/prodDb
-            username: dbuser
-            password: password123
-
-            pooled: true
-            properties:
-#                https://tomcat.apache.org/tomcat-8.0-doc/jdbc-pool.html
-                jmxEnabled: true
-                initialSize: 5
-                maxActive: 20
-                minIdle: 5
-                maxIdle: 10
-                maxWait: 10000
-                maxAge: 600000
-                timeBetweenEvictionRunsMillis: 5000
-                minEvictableIdleTimeMillis: 60000
-                validationQuery: SELECT 1
-                validationQueryTimeout: 30
-                validationInterval: 15000
-                testOnBorrow: false
-                testWhileIdle: true
-                testOnReturn: false
-                jdbcInterceptors: ConnectionState
-                defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+            dbCreate: update
+            url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     production:
         dataSource:
             dbCreate: none
